# tilequet

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml  publish.yml  unit-tests.yml
docs/: _config.yml  cli.md  faq.md  index.md  viewer.html
docs/_layouts/: default.html
docs/assets/css/: style.css
format-specs/: tilequet.md
tests/: conftest.py  test_cli.py  test_geopackage.py  test_mbtiles.py  test_metadata.py  test_validate.py
tilequet/: __init__.py  cli.py  cog2tilequet.py  geopackage2tilequet.py  mapserver2tilequet.py  mbtiles2tilequet.py  metadata.py  ogcmaps2tilequet.py  ogctiles2tilequet.py  pmtiles2tilequet.py  tilejson2tilequet.py  tiles3d2tilequet.py  urltemplate2tilequet.py  validate.py  wms2tilequet.py  wmts2tilequet.py
